# open_license_server

./: .gitignore  CMakeLists.txt
src/: communicator.cpp  communicator.h  globals.h  json_parser.cpp  json_parser.h  main.cpp  test_client.cpp  test_runner.cpp
src/commands/: cmd_generate_license.hpp  cmd_get_version.hpp  command.cpp  command.h  command_code.h  command_factory.cpp  command_factory.h
src/protocols/: json_protocol.cpp  json_protocol.h  protocol.h
src/test/: test_json_parser.cpp
